qt4-x11 (4:4.7.0~beta1+git3529+59c5857-1) UNRELEASED; urgency=low

  * NOT RELEASED YET.
  * Remove Qt Multimedia, Qt MediaServices and Qt WebKit packages.
  * Remove Debian patches:
    - 81_hurd_architecture.diff - merged upstream.
    - 97_alpha_ftbfs_qatomic_alpha_h_types.diff - merged upstream.
  * Update debian/control:
    - remove libqt4-declarative-widgets package.
    - add libqt4-declarative-folderlistmodel package.
    - add libqt4-declarative-gestures package.
  * Update debian/rules:
    - replace -multimedia by -no-multimedia configure option.
    - replace -webkit by -no-webkit configure option.
  * Update installed files.

 -- Fathi Boudra <fabo@debian.org>  Mon, 28 Jun 2010 14:41:40 +0300

qt4-x11 (4:4.7.0~beta1-1) experimental; urgency=low

  * New upstream release.
    - QtAssistant client library removal (libqt4-assistant).
    - legacy Qt Assistant removal (assistant_adp).
    - new QtDeclarative module (libqt4-declarative).
    - new QtMediaServices module (libqt4-mediaservices).
  * Remove upstream patches:
    - 0001_qpixmap_load_no_modify_referenced_copies.diff - stolen upstream
    - 0002_qmake_qfileinfo_absolutepath.diff - stolen upstream
    - 0003_s390_fix_atomic_ops_related_crashes.diff - stolen upstream
    - 0004_problem_displaying_half_width_character.diff - stolen upstream
    - 0005_always_redraw_the_complete_control.diff - stolen upstream
    - 0006_expand_indicator_would_not_be_displayed.diff - stolen upstream
  * Remove Debian patches:
    - 82_hurd_SA_SIGINFO.diff - merged upstream
    - 95_sparc_platform_definition.diff - merged upstream
    - 98_alpha_ftbfs_wtf_platform_support.diff - stolen upstream
  * Refresh Debian patches:
    - 30_webkit_unaligned_access.diff - partially merged upstream
  * Update debian/control:
    - add libgstreamer0.10-dev, libgstreamer-plugins-base0.10-dev,
      libpulse-dev and libxv-dev build dependencies.
    - add libqt4-declarative, libqt4-mediaservices,