@@ -1,4 +1,4 @@
-qt4-demos: font-in-non-font-package usr/lib/qt4/examples/declarative/fonts/fonts/tarzeau_ocr_a.ttf
+qt4-demos: font-in-non-font-package usr/lib/qt4/examples/declarative/text/fonts/fonts/tarzeau_ocr_a.ttf
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/affine/bg1.jpg
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/arthurplugin/bg1.jpg
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/arthurplugin/flower.jpg
@@ -14,11 +14,6 @@ qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/boxes/qt-logo.jpg
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/boxes/qt-logo.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/boxes/smiley.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/boxes/square.jpg
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/browser/data/addtab.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/browser/data/closetab.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/browser/data/defaulticon.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/browser/data/history.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/browser/data/loading.gif
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/chip/fileprint.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/chip/qt4logo.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/chip/rotateleft.png
@@ -27,18 +22,15 @@ qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/chip/zoomin.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/chip/zoomout.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/composition/flower.jpg
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/composition/flower_alpha.jpg
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/common/pics/background.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/common/pics/button-pressed.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/common/pics/button.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/common/pics/ghns_star.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/common/pics/loading.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/common/pics/reflection.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/common/pics/shadow-bottom.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/common/pics/shadow-corner.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/common/pics/shadow-right-screen.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/common/pics/shadow-right.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/calculator/Core/images/button-.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/calculator/Core/images/button-blue.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/calculator/Core/images/button-green.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/calculator/Core/images/button-purple.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/calculator/Core/images/button-red.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/calculator/Core/images/display.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/mobile/images/gloss.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/mobile/images/lineedit.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/mobile/images/quit.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/mobile/images/stripes.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/mobile/images/titlebar.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/flickr/mobile/images/toolbutton.png
@@ -56,6 +48,8 @@ qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/minehunt/Minehunt
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/photoviewer/PhotoViewerCore/images/box-shadow.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/photoviewer/PhotoViewerCore/images/busy.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/photoviewer/PhotoViewerCore/images/cardboard.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/rssnews/content/images/busy.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/rssnews/content/images/scrollbar.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/samegame/SamegameCore/pics/background.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/samegame/SamegameCore/pics/blueStar.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/samegame/SamegameCore/pics/blueStone.png
@@ -84,21 +78,14 @@ qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/twitter/TwitterCo
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/twitter/TwitterCore/images/stripes.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/twitter/TwitterCore/images/titlebar.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/twitter/TwitterCore/images/toolbutton.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/fieldtext/pics/cancel.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/fieldtext/pics/ok.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/addressbar-filled.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/addressbar.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/back-disabled.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/back.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/footer.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/forward-disabled.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/forward.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/header.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/reload.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/softshadow-bottom.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/softshadow-left.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/softshadow-right.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/softshadow-top.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/display.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/edit-delete.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/go-jump-locationbar.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/go-next-view.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/go-previous-view.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/scrollbar.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/titlebar-bg.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/declarative/webbrowser/content/pics/view-refresh.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/embeddeddialogs/No-Ones-Laughing-3.jpg
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/interview/images/folder.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/demos/interview/images/interview.png
@@ -244,99 +231,65 @@ qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/animation/animatedtiles/im
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/animation/animatedtiles/images/random.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/animation/animatedtiles/images/tile.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/animation/easing/images/qt-logo.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/animations/images/face-smile.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/animations/images/moon.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/animations/images/shadow.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/animations/images/star.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/animations/images/sun.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/aspectratio/pics/face.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/border-image/content/bw.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/border-image/content/colors.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/clocks/content/background.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/clocks/content/center.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/clocks/content/clock-night.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/clocks/content/clock.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/clocks/content/hour.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/clocks/content/minute.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/clocks/content/second.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/connections/content/bg1.jpg
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/connections/content/rotate-left.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/connections/content/rotate-right.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/dial/content/background.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/dial/content/needle.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/dial/content/needle_shadow.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/dial/content/overlay.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/dynamic/images/face-smile.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/dynamic/images/moon.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/dynamic/images/rabbit_brown.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/dynamic/images/rabbit_bw.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/dynamic/images/star.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/dynamic/images/sun.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/dynamic/images/tree_s.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/effects/pic.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/fillmode/face.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/focus/Core/images/arrow.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/focus/Core/images/qt-logo.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/gridview/pics/AddressBook_48.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/gridview/pics/AudioPlayer_48.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/gridview/pics/Camera_48.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/gridview/pics/DateBook_48.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/gridview/pics/EMail_48.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/gridview/pics/TodoList_48.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/gridview/pics/VideoPlayer_48.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/layouts/add.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/layouts/del.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/add.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/archive-insert.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/archive-remove.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/button-pressed.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/button.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/del.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/fruit-salad.jpg
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/go-down.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/go-up.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/hamburger.jpg
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/lemonade.jpg
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/list-add.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/list-remove.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/moreDown.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/moreUp.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/pancakes.jpg
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/trash.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/listview/content/pics/vegetable-soup.jpg
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/parallax/pics/background.jpg
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/parallax/pics/face-smile.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/parallax/pics/shadow.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/parallax/pics/yast-joystick.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/parallax/pics/yast-wol.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/animation/basics/images/face-smile.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/animation/basics/images/moon.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/animation/basics/images/shadow.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/animation/basics/images/star.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/animation/basics/images/sun.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/animation/states/user.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/cppextensions/plugins/com/nokia/TimeExample/center.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/cppextensions/plugins/com/nokia/TimeExample/clock.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/cppextensions/plugins/com/nokia/TimeExample/hour.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/cppextensions/plugins/com/nokia/TimeExample/minute.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/imageelements/borderimage/content/bw.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/imageelements/borderimage/content/colors.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/imageelements/borderimage/content/shadow.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/imageelements/image/face-smile.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/keyinteraction/focus/Core/images/arrow.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/keyinteraction/focus/Core/images/qt-logo.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/plugins/com/nokia/TimeExample/center.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/plugins/com/nokia/TimeExample/clock.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/plugins/com/nokia/TimeExample/hour.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/plugins/com/nokia/TimeExample/minute.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/progressbar/content/background.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/scrollbar/pics/niagara_falls.jpg
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/searchbox/images/edit-clear-locationbar-rtl.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/searchbox/images/lineedit-bg-focus.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/searchbox/images/lineedit-bg.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/states/user.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/tabwidget/tab.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/tic-tac-toe/content/pics/board.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/tic-tac-toe/content/pics/o.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/tic-tac-toe/content/pics/x.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/tutorials/samegame/shared/pics/background.jpg
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/tutorials/samegame/shared/pics/blueStar.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/tutorials/samegame/shared/pics/blueStone.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/tutorials/samegame/shared/pics/greenStar.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/tutorials/samegame/shared/pics/greenStone.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/tutorials/samegame/shared/pics/redStar.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/tutorials/samegame/shared/pics/redStone.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/tutorials/samegame/shared/pics/star.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/tutorials/samegame/shared/pics/yellowStone.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/velocity/cork.jpg
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/velocity/note-yellow.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/velocity/tack.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/webview/content/pics/cancel.png
-qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/webview/content/pics/ok.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/positioners/add.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/positioners/del.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/text/textselection/pics/endHandle.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/text/textselection/pics/startHandle.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/clocks/content/background.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/clocks/content/center.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/clocks/content/clock-night.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/clocks/content/clock.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/clocks/content/hour.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/clocks/content/minute.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/clocks/content/second.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/corkboards/cork.jpg
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/corkboards/note-yellow.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/corkboards/tack.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/dynamicscene/images/face-smile.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/dynamicscene/images/moon.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/dynamicscene/images/rabbit_brown.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/dynamicscene/images/rabbit_bw.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/dynamicscene/images/star.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/dynamicscene/images/sun.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/dynamicscene/images/tree_s.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/tic-tac-toe/content/pics/board.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/tic-tac-toe/content/pics/o.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/toys/tic-tac-toe/content/pics/x.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/dialcontrol/content/background.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/dialcontrol/content/needle.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/dialcontrol/content/needle_shadow.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/dialcontrol/content/overlay.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/flipable/content/5_heart.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/flipable/content/9_club.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/flipable/content/back.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/progressbar/content/background.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/scrollbar/pics/niagara_falls.jpg
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/searchbox/images/clear.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/searchbox/images/lineedit-bg-focus.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/searchbox/images/lineedit-bg.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/spinner/content/spinner-bg.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/spinner/content/spinner-select.png
+qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/declarative/ui-components/tabwidget/tab.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/dialogs/classwizard/images/background.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/dialogs/classwizard/images/banner.png
 qt4-demos: image-file-in-usr-lib usr/lib/qt4/examples/dialogs/classwizard/images/logo1.png
