@@ -247,6 +247,14 @@ override_dh_auto_install:
 	rm -f debian/tmp/usr/lib/pkgconfig/phonon.pc
 	rm -rf debian/tmp/usr/include/qt4/phonon
 
+	# Remove leftover directories
+	find $(CURDIR)/debian/tmp/usr/lib/qt4 -depth -type d \( -false \
+	  -o -name .moc\* \
+	  -o -name .obj\* \
+	  -o -name .pch \
+	  -o -name .rcc \
+	\) -print0 | xargs -0 rm -rf
+
 override_dh_install:
 	dh_install --list-missing --sourcedir=debian/tmp
 
