@@ -6,12 +6,14 @@ qt4-x11 (4:4.7.0~beta1+git3529+59c5857-1) UNRELEASED; urgency=low
     - 81_hurd_architecture.diff - merged upstream.
     - 97_alpha_ftbfs_qatomic_alpha_h_types.diff - merged upstream.
   * Update debian/control:
+    - bump Standards-Version to 3.9.0.
     - remove libqt4-declarative-widgets package.
     - add libqt4-declarative-folderlistmodel package.
     - add libqt4-declarative-gestures package.
   * Update debian/rules:
     - replace -multimedia by -no-multimedia configure option.
     - replace -webkit by -no-webkit configure option.
+    - remove leftover directories in override_dh_auto_install target.
   * Update installed files.
 
  -- Fathi Boudra <fabo@debian.org>  Mon, 28 Jun 2010 14:41:40 +0300
